--- a/src/components/ui/Modal/Modal.module.css
+++ b/src/components/ui/Modal/Modal.module.css
@@ -8,6 +8,8 @@
   border-radius: 4px;
   box-shadow: 24px 24px 48px rgba(0, 0, 0, 0.1);
   min-width: 300px;
+  max-width: 800px;
+  width: 90vw;
   min-height: 150px;
   padding: 16px;
   max-height: 90vh;
